--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -3,13 +3,15 @@
 	<head>
 		<title>AirBnB clone</title>
 
-		<link rel="shortcut icon" href="images/icon.ico" >
-
 		<link rel="stylesheet" href="static/styles/4-common.css?{{cache_id}}"/>
 		<link rel="stylesheet" href="static/styles/3-header.css?{{cache_id}}"/>
 		<link rel="stylesheet" href="static/styles/3-footer.css?{{cache_id}}"/>
 		<link rel="stylesheet" href="static/styles/6-filters.css?{{cache_id}}"/>
 		<link rel="stylesheet" href="static/styles/8-places.css?{{cache_id}}"/>
+		<link rel="shortcut icon" href="static/images/icon.ico" >
+		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+		<script defer src="static/scripts/1-hbnb.js?{{cache_id}}"></script>
+
 	</head>
     <body>
 		<header>
@@ -39,7 +41,12 @@
 					<h4>&nbsp;</h4>
 					<ul class="popover">
 						{% for amenity in amenities.values()|sort(attribute='name') %}
-							<li><h4>{{amenity.name}}</h4></li>
+							<li>
+								<input type="checkbox" 
+								 data-id="{{amenity.id}}"
+								 data-name="{{amenity.name}}"/>
+									<h4>{{amenity.name}}</h4>
+							</li>
 						{% endfor %}
 					</ul>
 				</div>
